[metadata]
name = tokensjar
version = 0.1.0
author = Tristan Cladet
author_email = tristan.cladet@gmail.com
description = A micro token interpretor/manipulator for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tcladet/tokensjar
project_urls =
    Bug Tracker = https://github.com/tcladet/tokensjar
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find: 
python_requires = >=3.8
install_requires =
    toposort==1.7

[options.packages.find]
where = src