[metadata]
name = tokensjar
version = 1.0.0
author = Tristan Cladet
author_email = tristan.cladet@gmail.com
description = A micro token interpretor/manipulator for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tcladet/tokensjar
project_urls =
    Bug Tracker = https://github.com/tcladet/tokensjar
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find: 
python_requires = >=3.11

[options.packages.find]
where = src